Fixed Eclipse setup and warnings